# dungeon-crawler

./: .gitmodules  Cargo.toml  Claude.md  PROJECT.md  README.md  build-for-web  gameplay.mkv  index.html  map.json  new_map.json
src/: combat.rs  components.rs  main.rs  map.rs  resources.rs  state.rs  utils.rs
src/maps/: avoidance.rs  mod.rs  procedural.rs  unbeatable.rs
src/systems/: animate_sprites.rs  change_sprite_for_awake_enemies.rs  cleanup.rs  combat.rs  defeat.rs  display_health.rs  follow.rs  health.rs  menu.rs  mod.rs  mouse_button_handler.rs  move_camera.rs  move_player.rs  on_defeat.rs  on_victory.rs  particle_system.rs  restart.rs  set_follow.rs  set_visibility.rs  setup.rs  setup_menu.rs  setup_play.rs  target_indicator.rs  track_mouse_movement.rs  victory.rs  walk_enemies.rs
web-build/: dungeon-crawler.js
